--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,10 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/translatorFragment">
+    app:startDestination="@id/newCardFragment">
 
     <fragment
-        android:id="@+id/translatorFragment"
+        android:id="@+id/newCardFragment"
         android:name="com.example.ruen.view.NewCardFragment"
         android:label="TranslatorFragment" />
     <fragment
