--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="translate_view_text_size">20sp</dimen>
     <dimen name="translate_view_margin_top">10dp</dimen>
+    <dimen name="cards_item_text_size">22sp</dimen>
+    <dimen name="cards_item_margin">5dp</dimen>
 </resources>
