--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,4 +12,8 @@
         android:id="@+id/cardsFragment"
         android:name="com.example.ruen.views.CardsFragment"
         android:label="CardsFragment" />
+    <fragment
+        android:id="@+id/cardRepeatFragment"
+        android:name="com.example.ruen.views.CardRepeatFragment"
+        android:label="CardRepeatFragment" />
 </navigation>
