--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,4 +16,8 @@
         android:id="@+id/cardRepeatFragment"
         android:name="com.example.ruen.views.CardRepeatFragment"
         android:label="CardRepeatFragment" />
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.example.ruen.views.SettingFragment"
+        android:label="SettingFragment" />
 </navigation>
