--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,10 +21,10 @@
 
     <PreferenceCategory android:title="Экраны">
         <ListPreference
-            android:defaultValue="new_card"
-            android:entries="@array/setting_first_fragment_title"
-            android:entryValues="@array/setting_first_fragment_values"
-            android:key="first_fragment"
+            android:defaultValue="@string/setting_start_fragment_values_new_card"
+            android:entries="@array/setting_start_fragment_title"
+            android:entryValues="@array/setting_start_fragment_values"
+            android:key="@string/preference_key_start_fragment"
             android:title="Стартовый экран" />
     </PreferenceCategory>
 
