--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,9 +8,9 @@
         <item>Темная</item>
     </string-array>
     <string-array name="setting_theme_values">
-        <item>system</item>
-        <item>light</item>
-        <item>dark</item>
+        <item>@string/setting_theme_values_system</item>
+        <item>@string/setting_theme_values_light</item>
+        <item>@string/setting_theme_values_dark</item>
     </string-array>
 
     // для настроек стартового фрагмента
