--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -7,15 +7,28 @@
     <fragment
         android:id="@+id/newCardFragment"
         android:name="com.example.ruen.views.NewCardFragment"
-        android:label="TranslatorFragment" />
+        android:label="TranslatorFragment" >
+        <action
+            android:id="@+id/action_newCardFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
+    </fragment>
     <fragment
         android:id="@+id/cardsFragment"
         android:name="com.example.ruen.views.CardsFragment"
-        android:label="CardsFragment" />
+        android:label="CardsFragment" >
+        <action
+            android:id="@+id/action_cardsFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
+    </fragment>
     <fragment
         android:id="@+id/cardRepeatFragment"
         android:name="com.example.ruen.views.CardRepeatFragment"
-        android:label="CardRepeatFragment" />
+        android:label="CardRepeatFragment" >
+        <action
+            android:id="@+id/action_cardRepeatFragment_to_settingFragment"
+            app:destination="@id/settingFragment"
+            app:popUpTo="@id/cardRepeatFragment" />
+    </fragment>
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.example.ruen.views.SettingFragment"
