Внешний вид fragment_cards.xml

--- a/presentation/src/main/res/layout/cards_item.xml
+++ b/presentation/src/main/res/layout/cards_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="@dimen/cards_item_margin"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/cards_item_margin">
 
     <TextView
         android:id="@+id/wordView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_medium"
         android:text="size"
+        android:textColor="@color/black"
         android:textSize="@dimen/cards_item_text_size" />
 </FrameLayout>
