--- a/presentation/src/main/res/layout/fragment_new_card.xml
+++ b/presentation/src/main/res/layout/fragment_new_card.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rect_round_up_corners_background"
-
     android:gravity="center_horizontal|bottom"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/Widget.Design.BottomSheet.Modal">
 
     <EditText
         android:id="@+id/wordView"
@@ -21,7 +22,7 @@
         android:padding="10dp"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="24sp">
+        android:textSize="22sp">
 
         <requestFocus />
     </EditText>
@@ -39,19 +40,21 @@
         android:padding="10dp"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="24sp" />
+        android:textSize="22sp" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
         android:layout_marginBottom="60dp"
+        android:background="@android:color/transparent"
         android:fadeScrollbars="true">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/translationContainerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@android:color/transparent"
             app:singleLine="true">
 
         </com.google.android.material.chip.ChipGroup>
