--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -24,7 +24,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="Widget.MaterialComponents.Chip.Choice.MyChip">
+    <style name="MyChip" parent="Widget.MaterialComponents.Chip.Filter">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:checkable">true</item>
@@ -45,7 +45,7 @@
     </style>
 
     <style name="ButtonTextAppearance" parent="TextAppearance.AppCompat.Widget.Button">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 </resources>
