--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -5,20 +5,15 @@
     app:startDestination="@id/cardRepeatFragment">
 
     <fragment
-        android:id="@+id/newCardFragment"
-        android:name="com.example.ruen.views.NewCardFragment"
-        android:label="TranslatorFragment" >
-        <action
-            android:id="@+id/action_newCardFragment_to_settingFragment"
-            app:destination="@id/settingFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/cardsFragment"
         android:name="com.example.ruen.views.CardsFragment"
         android:label="@string/сards">
         <action
             android:id="@+id/action_cardsFragment_to_settingFragment"
             app:destination="@id/settingFragment" />
+        <action
+            android:id="@+id/action_cardsFragment_to_newCardDialogFragment"
+            app:destination="@id/newCardDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/cardRepeatFragment"
@@ -32,4 +27,8 @@
         android:id="@+id/settingFragment"
         android:name="com.example.ruen.views.SettingFragment"
         android:label="@string/settings" />
+    <dialog
+        android:id="@+id/newCardDialogFragment"
+        android:name="com.example.ruen.views.NewCardFragment"
+        android:label="@string/new_card" />
 </navigation>
