Удалена настройка стартового экрана из preferences.xml

--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/cardRepeatFragment">
+    app:startDestination="@id/cardsFragment">
 
     <fragment
         android:id="@+id/cardsFragment"
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_cardsFragment_to_newCardDialogFragment"
             app:destination="@id/newCardDialogFragment" />
+        <action
+            android:id="@+id/action_cardsFragment_to_cardRepeatFragment"
+            app:destination="@id/cardRepeatFragment" />
     </fragment>
     <fragment
         android:id="@+id/cardRepeatFragment"
