--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -11,41 +11,10 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="fontFamily">@font/roboto</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorOnPrimary</item>
+        <item name="android:statusBarColor">?attr/colorOnPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <!-- Customize your theme here. -->
         <item name="backgroundPanelColor">@color/blue_100</item>
     </style>
 
-    <style name="Widget.AppCompat.TextView.TranslateTextView">
-        <item name="android:layout_marginTop">@dimen/translate_view_margin_top</item>
-        <item name="android:textSize">@dimen/translate_view_text_size</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <style name="MyChip" parent="Widget.MaterialComponents.Chip.Filter">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:checkable">true</item>
-    </style>
-
-    <style name="KnowButton" parent="Widget.Material3.Button.OutlinedButton">
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/blue_500</item>
-        <item name="android:textFontWeight" tools:targetApi="p">500</item>
-        <item name="android:textSize">14sp</item>
-        <item name="strokeColor">@color/blue_500</item>
-    </style>
-
-    <style name="ToolBar.TitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textSize">32sp</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-    </style>
-
-    <style name="ButtonTextAppearance" parent="TextAppearance.AppCompat.Widget.Button">
-        <item name="android:textSize">14sp</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-    </style>
 </resources>
