--- a/presentation/src/main/res/layout/fragment_cards.xml
+++ b/presentation/src/main/res/layout/fragment_cards.xml
@@ -35,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:elevation="5dp"
         android:padding="10dp"
         android:text="Начать повторение"
         android:textAppearance="@style/ButtonTextAppearance"
