--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -13,13 +13,11 @@
         <item name="android:checkable">true</item>
     </style>
 
-    <style name="KnowButton" parent="Widget.Material3.Button.OutlinedButton">
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/blue_500</item>
+    <style name="KnowButton">
         <item name="android:textFontWeight" tools:targetApi="p">500</item>
         <item name="android:textSize">14sp</item>
-        <item name="strokeColor">@color/blue_500</item>
+        <item name="android:textColor">#4071A3</item>
+        <item name="android:theme">@style/Widget.Material3.Button</item>
     </style>
 
     <style name="ToolBar.TitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
